data/forge_javadoc/1.7.10/processed/net_minecraft_world_gen_structure_StructureVillagePieces.Field2.md
# StructureVillagePieces.Field2

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.Field2

## Class signature

```java
public static class StructureVillagePieces.Field2 extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `protected void func_143011_b(NBTTagCompound p_143011_1_)`
- `protected void func_143012_a(NBTTagCompound p_143012_1_)`
- `static StructureVillagePieces.Field2 func_74902_a(StructureVillagePieces.Start p_74902_0_, java.util.List p_74902_1_, java.util.Random p_74902_2_, int p_74902_3_, int p_74902_4_, int p_74902_5_, int p_74902_6_, int p_74902_7_)`

## Fields

- `Field2`
- `Field2`