data/forge_javadoc/1.8.9/processed/net_minecraft_world_gen_structure_StructureVillagePieces.Field2.md
# StructureVillagePieces.Field2

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.Field2

## Class signature

```java
public static class StructureVillagePieces.Field2 extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World worldIn, java.util.Random randomIn, StructureBoundingBox structureBoundingBoxIn)` — second Part of Structure generating, this for example places Spiderwebs, Mob Spawners, it closes Mineshafts at the end, it adds Fences...
- `static StructureVillagePieces.Field2 func_175852_a(StructureVillagePieces.Start start, java.util.List<StructureComponent> p_175852_1_, java.util.Random rand, int p_175852_3_, int p_175852_4_, int p_175852_5_, EnumFacing facing, int p_175852_7_)`
- `protected void readStructureFromNBT(NBTTagCompound tagCompound)` — (abstract) Helper method to read subclass data from NBT
- `protected void writeStructureToNBT(NBTTagCompound tagCompound)` — (abstract) Helper method to write subclass data to NBT

## Fields

- `Field2`
- `Field2`